--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,7 @@ body {
     font-family: var(--font-family);
     color: var(--text-color);
     margin: 0px;
+    background-color: var(--surface-ground);
 }
 
 *:focus{
