--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -5,10 +5,13 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
+  --background: var(--surface-ground)
+  --ion-background-color: var(--surface-ground);
+
   --ion-statusbar-color: #2D3047;
   --ion-statusbar-color-dark: #2D3047;
   
-	--ion-color-primary: #2a9d8f;
+	--ion-color-primary: var(--primary-color);
 	--ion-color-primary-rgb: 42,157,143;
 	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 255,255,255;
@@ -63,6 +66,9 @@ http://ionicframework.com/docs/theming/ */
 	--ion-color-light-contrast-rgb: 0,0,0;
 	--ion-color-light-shade: #d7d8da;
 	--ion-color-light-tint: #f5f6f9;
+
+
+  --ion-tab-bar-background: var(--surface-ground);
 }
 /*
  * Dark Colors
@@ -70,9 +76,12 @@ http://ionicframework.com/docs/theming/ */
  */
 
  body.dark {
+  --background: var(--surface-ground);
+  --ion-background-color: var(--surface-ground);
+
   --ion-statusbar-color: #2D3047;
   
-	--ion-color-primary: #2a9d8f;
+	--ion-color-primary: var(--primary-color);
 	--ion-color-primary-rgb: 42,157,143;
 	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 255,255,255;
@@ -142,7 +151,7 @@ http://ionicframework.com/docs/theming/ */
  */
 
 .ios body.dark {
-  --ion-background-color: #000000;
+  --ion-background-color: var(--surface-ground);
   --ion-background-color-rgb: 0, 0, 0;
 
   --ion-text-color: #ffffff;
@@ -170,7 +179,7 @@ http://ionicframework.com/docs/theming/ */
 
   --ion-toolbar-background: #0d0d0d;
 
-  --ion-item-background: #1c1c1c;
+  --ion-item-background: var(--surface-ground);
   --ion-item-background-activated: #313131;
 }
 
