--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,18 @@
 html{
+    height: 100%;
     font-size: 0.9rem;
 }
 
 body {
+    height: 100%;
     font-family: var(--font-family);
     color: var(--text-color);
     margin: 0px;
     background-color: var(--surface-ground);
+}
+
+#app{
+    height: 100%;
 }
 
 *:focus{
